--- a/style.css
+++ b/style.css
@@ -1,5 +1,19 @@
+@font-face {
+	font-family: "system";
+	font-style: normal;
+	font-weight: 300;
+	src: local(".SFNSText-Light"), local(".HelveticaNeueDeskInterface-Light"), local(".LucidaGrandeUI"),
+		local("Ubuntu Light"), local("Segoe UI Light"), local("Roboto-Light"), local("DroidSans"), local("Tahoma");
+}
+
 * {
 	padding: 0;
 	margin: 0;
 	box-sizing: border-box;
+}
+
+html,
+body {
+	height: 100%;
+	font-family: "system";
 }
