--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@
 }
 
 :root {
+	--color-1: rgb(230, 230, 230);
+	--search-bar-bg-color: var(--color-1);
 }
 
 * {
@@ -48,7 +50,40 @@ body {
 
 .header {
 	grid-area: header;
-	background-color: antiquewhite;
+	background-color: white;
+	padding: 1rem;
+	display: grid;
+	grid-template-columns: 3fr 2fr;
+	grid-template-rows: auto auto;
+	gap: 2rem;
+}
+
+.header-top-bar {
+	display: flex;
+}
+
+.search-bar {
+	width: 100%;
+	display: flex;
+	margin-right: auto;
+	gap: 1rem;
+}
+
+.search-input {
+	max-height: 1.5rem;
+	background-color: var(--search-bar-bg-color);
+	border: 0;
+	border-radius: 0.85rem;
+	width: 100%;
+}
+
+.header-content {
+	display: flex;
+}
+
+.user-info-bar {
+	display: grid;
+	margin-right: auto;
 }
 
 .content {
