--- a/style.css
+++ b/style.css
@@ -176,4 +176,24 @@ body {
 			"content";
 		grid-template-columns: 1fr;
 	}
+
+	.header {
+		grid-template-rows: 1fr 1fr;
+		max-height: 100px;
+	}
+}
+
+@media (max-width: 720px) {
+	.container {
+		grid-template-areas:
+			"side"
+			"header"
+			"content";
+		grid-template-columns: 1fr;
+	}
+
+	.header {
+		grid-template-rows: 1fr 1fr;
+		max-height: 100px;
+	}
 }
