--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@
 	--action-buttons-font-color: var(--color-2);
 	--content-bg-color: var(--color-1);
 	--toolbar-bg-color: var(--color-3);
+	--tile-bg-color: var(--color-2);
 }
 
 * {
@@ -167,6 +168,36 @@ body {
 .content {
 	grid-area: content;
 	background-color: var(--content-bg-color);
+	display: grid;
+	grid-template-columns: 4fr 1fr;
+	grid-template-rows: 1fr 1fr;
+	padding: 1rem;
+}
+
+.content__tiles {
+	grid-row: 1 / -1;
+}
+
+.tiles {
+	display: grid;
+	grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
+	grid-auto-rows: 15rem;
+	gap: 2rem;
+}
+
+.tile {
+	background-color: var(--tile-bg-color);
+	border-radius: 0.5rem;
+	padding: 2rem 1rem 2rem 2rem;
+	display: grid;
+	grid-template-rows: auto 1fr auto;
+}
+
+.detailed-buttons {
+	display: grid;
+	grid-auto-flow: column;
+	gap: 1rem;
+	justify-content: end;
 }
 
 @media (max-width: 1024px) {
@@ -180,7 +211,12 @@ body {
 
 	.header {
 		grid-template-rows: 1fr 1fr;
-		max-height: 100px;
+		/* max-height: 100px; */
+	}
+
+	.content {
+		grid-template-columns: 1fr;
+		grid-template-rows: repeat(3, auto);
 	}
 }
 
@@ -195,6 +231,11 @@ body {
 
 	.header {
 		grid-template-rows: 1fr 1fr;
-		max-height: 100px;
+		/* max-height: 100px; */
+	}
+
+	.content {
+		grid-template-columns: 1fr;
+		grid-template-rows: repeat(3, auto);
 	}
 }
