--- a/style.css
+++ b/style.css
@@ -206,6 +206,14 @@ body {
 	justify-content: end;
 }
 
+.detailed-buttons_button {
+	display: grid;
+	justify-content: center;
+	align-items: center;
+	background: none;
+	border: 0;
+}
+
 @media (max-width: 1024px) {
 	.container {
 		grid-template-areas:
