--- a/style.css
+++ b/style.css
@@ -186,7 +186,7 @@ body {
 
 .tiles {
 	display: grid;
-	grid-template-columns: repeat(auto-fill, minmax(21.5rem, 1fr));
+	grid-template-columns: repeat(auto-fill, minmax(22rem, 1fr));
 	grid-template-rows: min-content;
 	grid-auto-rows: 18rem;
 	gap: 1rem;
@@ -287,26 +287,27 @@ body {
 
 	.content {
 		grid-template-columns: 1fr;
-		grid-template-rows: repeat(3, auto);
+		grid-template-rows: none;
+		grid-auto-flow: row;
 	}
-}
 
-@media (max-width: 720px) {
-	.container {
-		grid-template-areas:
-			"side"
-			"header"
-			"content";
+	.content__tiles {
+		margin-top: 1rem;
+		grid-row: auto;
+	}
+
+	.tiles--announcements {
+		display: grid;
 		grid-template-columns: 1fr;
+		grid-template-rows: auto 1fr;
+		grid-row: 2;
+		gap: 1rem;
 	}
 
-	.header {
-		grid-template-rows: 1fr 1fr;
-		/* max-height: 100px; */
-	}
-
-	.content {
+	.tiles--trendings {
+		display: grid;
 		grid-template-columns: 1fr;
-		grid-template-rows: repeat(3, auto);
+		grid-template-rows: auto 1fr;
+		gap: 1rem;
 	}
 }
