--- a/style.css
+++ b/style.css
@@ -300,10 +300,19 @@ body {
 	border: 0;
 }
 
+@media (max-width: 1280px) {
+	.container {
+		grid-template-columns: 1fr;
+		grid-template-rows: auto 1fr;
+		grid-template-areas:
+			"header"
+			"content";
+	}
+}
+
 @media (max-width: 1024px) {
 	.container {
 		grid-template-areas:
-			"side"
 			"header"
 			"content";
 		grid-template-columns: 1fr;
@@ -315,14 +324,14 @@ body {
 	}
 
 	.content {
-		grid-template-columns: 1fr;
+		grid-template-columns: 1fr 1fr;
 		grid-template-rows: none;
-		grid-auto-flow: row;
 	}
 
 	.content__tiles {
 		margin-top: 1rem;
 		grid-row: auto;
+		grid-column: 1 / -1;
 	}
 
 	.tiles--announcements {
@@ -330,6 +339,7 @@ body {
 		grid-template-columns: 1fr;
 		grid-template-rows: auto 1fr;
 		grid-row: 2;
+		grid-column: 1;
 		gap: 1rem;
 	}
 
@@ -337,6 +347,8 @@ body {
 		display: grid;
 		grid-template-columns: 1fr;
 		grid-template-rows: auto 1fr;
+		grid-column: 2;
+		grid-row: 2;
 		gap: 1rem;
 	}
 }
