--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@
 	--tile-bg-color: var(--color-2);
 	--tile-status-border: var(--color-4);
 	--description-font-color: var(--color-5);
+	--toolbar-font-color: var(--color-2);
 }
 
 * {
@@ -65,6 +66,46 @@ body {
 	grid-area: side;
 	background-color: var(--toolbar-bg-color);
 	display: grid;
+	color: var(--toolbar-font-color);
+	grid-auto-rows: min-content;
+	gap: 3rem;
+	align-items: start;
+	font-weight: bold;
+	padding: 1rem;
+}
+
+.logo {
+	display: flex;
+	align-items: center;
+	justify-self: start;
+	gap: 1.1rem;
+}
+
+.logo__header {
+	font-size: 1.8rem;
+}
+
+.menu {
+	list-style-type: none;
+}
+
+.toolbar__menu {
+	font-size: 1.4rem;
+}
+
+.toolbar__menu .item__icon {
+	font-size: 1.9rem;
+}
+
+.toolbar__logo .logo__icon {
+	font-size: 2.9rem;
+}
+
+.item {
+	display: flex;
+	align-items: center;
+	gap: 1.5rem;
+	margin: 0.7rem;
 }
 
 .header {
@@ -308,6 +349,10 @@ body {
 		grid-template-areas:
 			"header"
 			"content";
+	}
+
+	.toolbar {
+		display: none;
 	}
 }
 
